// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InningsComplete should render correctly when status is all out 1`] = `
<div
  className="alert alert-dark"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <h4
    className="alert-heading"
  >
    Innings complete
  </h4>
  <p>
    team have been bowled out
  </p>
  <hr />
  <button
    className="btn btn-dark"
    onClick={[MockFunction]}
  >
    OK
  </button>
</div>
`;

exports[`InningsComplete should render correctly when status is neither all out or overs complete 1`] = `
<div
  className="alert alert-dark"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <h4
    className="alert-heading"
  >
    Innings complete
  </h4>
  <p>
    
  </p>
  <hr />
  <button
    className="btn btn-dark"
    onClick={[MockFunction]}
  >
    OK
  </button>
</div>
`;

exports[`InningsComplete should render correctly when status is overs complete 1`] = `
<div
  className="alert alert-dark"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <h4
    className="alert-heading"
  >
    Innings complete
  </h4>
  <p>
    The overs are complete
  </p>
  <hr />
  <button
    className="btn btn-dark"
    onClick={[MockFunction]}
  >
    OK
  </button>
</div>
`;
